name:                mono-traversable
version:             1.0.0
synopsis:            Type classes for mapping, folding, and traversing monomorphic containers
description:         Monomorphic variants of the Functor, Foldable, and Traversable typeclasses. If you understand Haskell's basic typeclasses, you understand mono-traversable. In addition to what you are used to, it adds on an IsSequence typeclass and has code for marking data structures as non-empty.
homepage:            https://github.com/snoyberg/mono-traversable
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman, John Wiegley, Greg Weber
maintainer:          michael@snoyman.com
category:            Data
build-type:          Simple
extra-source-files:  README.md
                     ChangeLog.md
cabal-version:       >=1.10

flag base49
  default: True
  manual: False
  description: Use base 4.9 or later

library
  ghc-options: -Wall
  exposed-modules:     Data.MonoTraversable
                       Data.Containers
                       Data.Sequences
                       Data.NonNull
  build-depends:       base >= 4.5 && < 5
                     , containers >= 0.4
                     , unordered-containers >=0.2
                     , hashable
                     , bytestring >= 0.9
                     , text >=0.11
                     , transformers >=0.3
                     , vector >=0.10
                     , vector-algorithms >= 0.6
                     , split >= 0.2

  if flag(base49)
    build-depends:     base >= 4.9
  else
    build-depends:     base < 4.9
                     , semigroups >= 0.10

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  main-is:             main.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Spec
  default-language:    Haskell2010
  build-depends:       base
                     , mono-traversable
                     , bytestring
                     , text
                     , hspec
                     , HUnit
                     , transformers
                     , vector
                     , QuickCheck
                     , semigroups
                     , containers
                     , unordered-containers
                     , foldl

benchmark sorting
    type: exitcode-stdio-1.0
    hs-source-dirs: bench
    build-depends:  base
                  , criterion
                  , mono-traversable
                  , vector
                  , mwc-random
    main-is:        sorting.hs
    ghc-options:    -Wall -O2
    default-language:    Haskell2010

source-repository head
  type: git
  location: git://github.com/snoyberg/mono-traversable.git
